fixed letter-spacing and padding for better reading experience

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -7,6 +7,6 @@
 
 @media only screen and (max-width: 500px) {
   .layout {
-    padding: 0 2.5em;
+    padding: 0em 2.5em 1.75em 2.5em;
   }
 }
