--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -232,6 +232,7 @@ blockquote {
 
   #biography p {
     font-size: 1.0272rem;
+    letter-spacing: 0.5px;
   }
 }
 
